# aws-tui

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  main.rs  ui.rs
src/components/: aws_base_component.rs  cloudwatch.rs  dynamodb.rs  mod.rs  s3.rs  tab.rs
src/event_managment/: event.rs  mod.rs
src/services/: mod.rs  read_config.rs
src/services/aws/: cloudwatch_client.rs  dynamo_client.rs  mod.rs  s3_client.rs  tab_clients.rs
src/widgets/: aws_service_navigator.rs  input_box.rs  mod.rs  paragraph.rs  popup.rs  service_navigator.rs
