[package]
name = "aws-tui"
version = "0.1.0"
description = "AWS TUI"
authors = ["Mohammad Mousavi <mohammad.m@xalgo.io>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
config = "0.15.11"
dirs = "6.0.0"
aws-smithy-types = "1.2.0"
aws-sdk-dynamodb = "1.37.0"
async-trait = "0.1.82"
aws-config = "1.5.3"
aws-types = "1.3.2"
thiserror = "1.0.63"
aws-smithy-runtime-api = "1.7.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
aws-sdk-s3 = "1.38.0"
clipboard = "0.5"
serde_json = "1.0"
aws-sdk-cloudwatch = "1.70.0"
aws-sdk-cloudwatchlogs = "1.76.0"
chrono = "0.4"


[dev-dependencies]
mockall = "0.13.1"
tokio-test = "0.4"
